--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@emotion/core": "^10.0.34",
+    "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.11.0",
     "@n8tb1t/use-scroll-position": "^1.0.43",
     "@testing-library/jest-dom": "^4.2.4",
@@ -21,6 +23,7 @@
     "react-scripts": "3.3.0",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
+    "smooth-scroll": "^16.1.3",
     "styled-components": "^5.0.0"
   },
   "scripts": {
