--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.3.0",
     "react-slick": "^0.25.2",
+    "react-youtube": "^7.12.0",
     "slick-carousel": "^1.8.1",
     "smooth-scroll": "^16.1.3",
     "styled-components": "^5.0.0"
