--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "NODE_ENV=production node src/index.js",
+    "heroku-postbuild": "NODE_ENV=production cd client && npm install && npm run build",
     "dev:server": "NODE_ENV=development nodemon ./src/index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
