--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@emotion/core": "^10.0.34",
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@n8tb1t/use-scroll-position": "^1.0.43",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -15,6 +16,7 @@
     "axios": "^0.19.2",
     "date-fns": "^2.15.0",
     "material-table": "^1.68.0",
+    "notistack": "^1.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^11.0.3",
