--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,8 +1,10 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/mizahom/public_html/
     - /opt/cpanel/ea-nodejs10/bin/cd repositories/mizah/
     - /opt/cpanel/ea-nodejs10/bin/npm install
-    - /opt/cpanel/ea-nodejs10/bin/set NODE_ENV=production
+    - /opt/cpanel/ea-nodejs10/bin/node
+    - NODE_ENV=production
+    - PORT=80
+    - .exit
     - /opt/cpanel/ea-nodejs10/bin/node src/index.js
