--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,6 +1,7 @@
 ---
 deployment:
   tasks:
+    - export DEPLOYPATH=/home/mizahom/public_html/
     - /opt/cpanel/ea-nodejs10/bin/cd repositories/mizah/
     - /opt/cpanel/ea-nodejs10/bin/npm install
     - /opt/cpanel/ea-nodejs10/bin/node
