--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,6 @@
     "react-dropzone": "^11.0.3",
     "react-dropzone-component": "^3.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.3.0",
     "react-slick": "^0.25.2",
     "react-youtube": "^7.12.0",
     "slick-carousel": "^1.8.1",
@@ -68,6 +67,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "husky": "^0.14.3",
     "lint-staged": "^10.0.1",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "react-scripts": "^3.3.0"
   }
 }
